modified color and script.

--- a/wednesday/index.html
+++ b/wednesday/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" href="css/main.css" type="text/css">
 </head>
 <body>
-   <h1>Hey it's wednesday</h1>
+   <h1>Hey it's wednesday!!</h1>
    <h2>aka Hump day</h2>
+   <h3>Thanks for letting me collaborate!</h3>
     
 </body>
 </html>
